--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,10 +25,10 @@ pages_build_output_dir = ".svelte-kit/cloudflare"
 
 # Bind a D1 database. D1 is Cloudflare’s native serverless SQL database.
 # Docs: https://developers.cloudflare.com/pages/functions/bindings/#d1-databases
-# [[d1_databases]]
-# binding = "MY_DB"
-# database_name = "my-database"
-# database_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+ [[d1_databases]]
+ binding = "DB"
+ database_name = "stories"
+ database_id = "7652d6ed-c557-4103-a689-1a07f8f856c2"
 
 # Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.
 # Durable Objects can live for as long as needed. Use these when you need a long-running "server", such as in realtime apps.
