--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
     "@sveltejs/adapter-cloudflare": "^4.7.2",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-variants": "^0.3.0",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0",
     "wrangler": "^3.80.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.15"
+  }
 }
