--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "ky": "^1.7.2"
   }
 }
