--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.20",
+    "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
